<resources>
    <string name="app_name">GymBuds</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="register"><u><b>Register/New Gym Bud</b></u></string>
    <string name="login_buttonlbl">Login</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_email">email</string>
    <string name="lblmale_checkbox">Male</string>
    <string name="lblfemale_checkbox">Female</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="registerbtn_lbl">Register</string>
    <string name="lbl_where_you_train">Where Do You Train</string>
    <string name="hint_gym">Golds Gym</string>
    <string name="hint_password">Password</string>
    <string name="please_wait">Please Wait</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_password"><b>Forgot Password</b></string>
    <string name="forgot_password_description">Enter your e-mail addresss and we\'ll send you an email to reset your password</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="edit_info">Edit Info</string>
    <string name="settings_toolbarlbl">Settings</string>
    <string name="savebtn_lbl">Save</string>
    <string name="profile_info_toolbarlbl">Profile Info</string>
    <string name="register_success">Successfully Registered</string>
    <string name="err_enter_username">Enter Username</string>
    <string name="err_enter_password">Enter Password</string>
    <string-array name="us_states">
        <item>Alabama</item> <item>West Virginia</item> <item> Wisconsin</item>
        <item>Alaska</item>   <item>Washington</item>   <item>Wyoming</item>
        <item>Arizona</item>   <item>Virginia</item>
        <item>Arkansas</item>   <item>Vermont</item>
        <item>California</item>   <item>Utah</item>
        <item>Colorado</item>   <item>Texas</item>
        <item>Connecticut</item>   <item>Tennessee</item>
        <item>Delaware</item>   <item>South Dakota</item>
        <item>Florida</item>   <item>South Carolina</item>
        <item>Georgia</item>   <item>Rhode Island</item>
        <item>Hawaii</item>   <item>Pennsylvania</item>
        <item>Idaho</item>   <item>Oregon</item>
        <item>Illinois</item>   <item>Oklahoma</item>
        <item>Indiana</item>   <item>Ohio</item>
        <item>Iowa</item>   <item>North Dakota</item>
        <item>Kansas</item>   <item>North Carolina</item>
        <item>Kentucky</item>   <item>New York</item>
        <item>Louisiana</item>   <item>New Mexico</item>
        <item>Maine</item>   <item>New Jersey</item>
        <item>Maryland</item>   <item>New Hampshire</item>
        <item>Massachusetts</item>   <item>Nevada</item>
        <item>Michigan</item>   <item>Nebraska</item>
        <item>Minnesota</item>   <item>Montana</item>
        <item>Mississippi</item>   <item>Missouri</item>
    </string-array>
</resources>