<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/app_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:layout_width="@dimen/logo_width_height"
            android:layout_height="@dimen/logo_width_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/gymbudlogoblk"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlUsername"
            android:layout_width="@dimen/login_editText_width"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/username_login_margin_top"
            android:layout_height="wrap_content"
            android:hint="@string/user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bud_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_inputbox"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            android:layout_width="@dimen/login_editText_width"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/username_login_margin_top"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bud_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_inputbox"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/login_register_button_height_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/logibtn_marginTop"
            android:text="@string/login_buttonlbl"
            android:textSize="@dimen/login_registerlbl_size"
            android:textColor="@color/login_button_text_color"
            android:background="@drawable/custom_button"
            />
        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/registerLbl_marginTop"
            android:text="@string/register"
            android:textSize="@dimen/login_registerlbl_size"
            />

        <TextView
            android:id="@+id/txt_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/forgot_password_text_size"
            android:text="@string/forgot_password_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>