<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".activities.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/fl_header"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_layout_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/gymbud_logo"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_title"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/forgot_password"
        />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/forgot_password_description"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_forgot_password_email"
        android:text="@string/hint_email"
        android:layout_gravity="center_horizontal"
        android:layout_width="350dp"
        android:layout_height="@dimen/editText_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:layout_marginTop="20dp"
        >

        <EditText
        android:id="@+id/edt_forgot_password_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_inputbox"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_retrievePassword"
        android:layout_width="@dimen/forgot_passwordbtn"
        android:textSize="@dimen/btnlbl_text_size"
        android:textAlignment="center"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="15dp"
        android:textColor="@color/login_button_text_color"
        android:background="@drawable/custom_button"
        app:layout_constraintTop_toBottomOf="@id/tl_forgot_password_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/retrieve_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>