<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".activities.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/set_userprofpic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_user_placeholder"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="10dp"
                app:civ_shadow_color="#3f51b5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:id="@+id/btnadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-60dp"
                android:src="@drawable/ic_baseline_add_24"
                android:layout_marginStart="100dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/set_til_firstName"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_firstName"
                android:layout_marginTop="25dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_userprofpic"
                >

                <EditText
                    android:id="@+id/set_edt_reg_Fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_inputbox"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/set_til_lastName"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_lastName"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_til_firstName"
                >

                <EditText
                    android:id="@+id/set_edt_reg_Lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_inputbox"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/set_til_email"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_email"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_til_lastName"
                >

                <EditText
                    android:id="@+id/set_edt_reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_inputbox"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/set_til_password"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_password"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_til_email"
                >

                <EditText
                    android:id="@+id/set_edt_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_inputbox"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/set_llcbgender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_til_email"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >
                <CheckBox
                    android:id="@+id/set_cbMale"
                    android:text="@string/lblmale_checkbox"
                    android:textSize="@dimen/cb_text_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    />
                <CheckBox
                    android:id="@+id/set_cbFemale"
                    android:layout_width="0dp"
                    android:text="@string/lblfemale_checkbox"
                    android:textSize="@dimen/cb_text_size"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/set_llcity_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_llcbgender"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/set_til_city"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_city"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/set_til_lastName">

                    <EditText
                        android:id="@+id/set_edt_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_inputbox"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/set_til_state"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/hint_state"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/set_til_lastName">

                    <EditText
                        android:id="@+id/set_edt_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_inputbox"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/set_txtwhere_you_train_lbl"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/lbl_where_you_train"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_llcity_state"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/set_til_where_you_train"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_gym"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_txtwhere_you_train_lbl">

                <EditText
                    android:id="@+id/set_edt_where_you_train"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_inputbox"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/set_btn_save"
                android:layout_width="match_parent"
                android:text="@string/savebtn_lbl"
                android:textColor="@color/app_background"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/set_til_where_you_train"
                android:background="@drawable/custom_button"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>