<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".activities.BudRegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/userprofpic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/gymbudlogoblk"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10dp"
            app:civ_shadow_color="#3f51b5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_firstName"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_firstName"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="@dimen/editText_height"
            android:background="@drawable/custom_inputbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userprofpic"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_reg_Fname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_lastName"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_lastName"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_inputbox"
            android:layout_height="@dimen/editText_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_firstName"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_reg_Lname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_email"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_inputbox"
            android:layout_height="@dimen/editText_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_lastName"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_reg_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_password"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="@dimen/editText_height"
                android:background="@drawable/custom_inputbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/llcbgender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <CheckBox
                android:id="@+id/cbMale"
                android:text="@string/lblmale_checkbox"
                android:textSize="@dimen/cb_text_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                />
            <CheckBox
                android:id="@+id/cbFemale"
                android:layout_width="0dp"
                android:text="@string/lblfemale_checkbox"
                android:textSize="@dimen/cb_text_size"
                android:layout_height="wrap_content"
                android:layout_weight=".5"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/llcity_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llcbgender"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight=".33"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/countrySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight=".33"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/stateSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight=".33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/citySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/txtwhere_you_train_lbl"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_height="@dimen/editText_height"
            android:text="@string/lbl_where_you_train"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llcity_state"
            />

            <EditText
                android:id="@+id/edt_where_you_train"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_height"
                android:background="@drawable/custom_inputbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llcbgender"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

        <Button
            android:id="@+id/rbtn_register"
            android:layout_width="match_parent"
            android:text="@string/registerbtn_lbl"
            android:textSize="@dimen/btn_text_size"
            android:textAlignment="center"
            android:textColor="@color/app_background"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llcity_state"
            android:background="@drawable/custom_button"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>